<resources>
    <string name="app_name">Radioo!</string>
    <string name="title_activity_playing2">Playing2Activity</string>
    <string name="title_home">Radioo!</string>
    <string name="title_dashboard">Record!</string>
    <string name="title_notifications">Favourite!</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_playing3">Playing3Activity</string>

    <string name="tab_text_1">Player</string>
    <string name="tab_text_2">Podcasts</string>
    <string name="tab_text_3">Favourites</string>
    <string name="title_activity_main_test">MainTestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>send_station

    <string name="send_station">Envoyer</string>

    <string name="show">Show</string>
    <string name="enter_phone">Enter a phone number</string>
    <string name="phone_status">"Phone Status: "</string>
    <string name="ringing">"RINGING, number: "</string>
    <string name="offhook">OFFHOOK</string>
    <string name="idle">IDLE</string>
    <string name="restarting_app">Restarting app</string>
    <string name="permission_not_granted">PERMISSION NOT GRANTED!</string>
    <string name="dial_number">"Phone Status: DIALING: "</string>
    <string name="failure_permission">Failure to obtain permission!</string>
    <string name="telephony_enabled">Telephony is enabled</string>
    <string name="telephony_not_enabled">"TELEPHONY NOT ENABLED! "</string>
    <string name="call">Call</string>
    <string name="make_a_call">Make a call</string>
    <string name="send_a_message">Send a message</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="phone_disabled">Phone calling disabled.</string>
    <string name="retry">Retry</string>
    <string name="sms_disabled">SMS usage disabled</string>
    <string name="granted_permission">Permission Granted</string>

    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="selected_datetime">The date and time you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="original_button">Framework Picker</string>
    <string name="pick_datetime">Pick Date+Time</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate">Vibrate on touch</string>
    <string name="dismiss">Dismiss on pause (eg: orientation change)</string>
    <string name="title">Show a title</string>
    <string name="show_version_2">Use marshmallow layout</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="disable_times">Disable specific times</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="switch_orientation">Switch scroll orientation</string>
    <string name="default_selection">Use alternative default selection</string>

    <string name="tab_title_time">Time</string>
    <string name="tab_title_date">Date</string>
    <string name="tab_title_datetime">Date+Time</string>

</resources>
